incz - ended Co-authored-by: Ruta Marcin (STUD) <marcin.ruta.stud@pw.edu.pl>

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,14 +5,14 @@
     "version": "0.2.0",
     "configurations": [
         {
-            "name": "Python: FastAPI",
+            "name": "Python: Django",
             "type": "python",
             "request": "launch",
-            "module": "uvicorn",
+            "program": "${workspaceFolder}/incz-back/manage.py",
             "args": [
-                "main:app"
+                "runserver"
             ],
-            "jinja": true,
+            "django": true,
             "justMyCode": true
         }
     ]
